// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
import "ReplyBase.proto";

option java_multiple_files = true;
option java_package = "rpc";
option java_outer_classname = "UserProto";
option objc_class_prefix = "HLW";

package rpc;

service UserLogin {
    rpc Login (LoginRequest) returns (LoginReply);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginReply {
    ReplyBase message = 1;
    int64 user_id = 2;
    string first_name = 3;
    string last_name = 4;
    string phone = 5;
    string address = 6;
    string card_no = 7;
    string account_no = 8;
    string card_balance = 9;
}
